k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lumio
  labels:
    app.kubernetes.io/component: prerequisite
